fix heart button safari

--- a/style/sass/Components/_heart-button.sass
+++ b/style/sass/Components/_heart-button.sass
@@ -1,5 +1,5 @@
 .heart-button
- padding: 0
+ padding: 0.01em
  font-size: 1.3em
  border: 0
  color: black
