--- a/style/sass/output/style.css
+++ b/style/sass/output/style.css
@@ -537,7 +537,7 @@ header .container .back-btn {
 }
 
 .heart-button {
-  padding: 0;
+  padding: 0.01em;
   font-size: 1.3em;
   border: 0;
   color: black;
